# project-samba-insight

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  ENVIRONMENT_STANDARDIZATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_RUNBOOK.md  README.md  coverage.xml  dataset-metadata.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dbt/: DBT_CLOUD_DEPLOYMENT.md  dbt_project.yml  profiles.yml.example  selectors.yml
dbt/models/marts/: README.md  mart_category_performance.sql  mart_churn_prediction.sql  mart_customer_cohorts.sql  mart_customer_retention.sql  mart_customer_retention_quarterly.sql  mart_executive_summary.sql  mart_geographic_performance.sql  mart_product_performance.sql  mart_sales_daily.sql  mart_sales_monthly.sql  mart_unit_economics.sql  schema.yml
dbt/models/staging/: .gitkeep  schema.yml  sources.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_reviews.sql  stg_sellers.sql
dbt/models/warehouse/: schema.yml
dbt/models/warehouse/dimensions/: .gitkeep  dim_customer.sql  dim_date.sql  dim_product.sql  dim_seller.sql
dbt/models/warehouse/facts/: .gitkeep  fact_orders.sql
dbt/tests/data_quality/: assert_data_freshness_30_days.sql
great_expectations/: great_expectations.yml
great_expectations/expectations/: .ge_store_backend_id  fact_orders_suite.json  mart_sales_daily_suite.json
notebooks/: 01_exploratory_data_analysis.ipynb  02_cohort_ltv_analysis.ipynb  notebook_utils.py
scripts/: reset_gcp_resources.py  scratch.sh
src/: __init__.py
src/dashboards/: README.md  __init__.py  app.py  db_connection.py
src/dashboards/pages/: customer_analytics.py  data_quality.py  executive_dashboard.py  sales_operations.py
src/ingestion/: __init__.py  bigquery_loader.py  gcs_uploader.py  kaggle_downloader.py
src/models/: __init__.py
src/utils/: __init__.py  bigquery_helper.py  config.py  gcs_helper.py  logger.py
src/validation/: great_expectations_runner.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end_pipeline.py
tests/unit/: test_config.py  test_kaggle_downloader.py  test_logger.py
