# ============================================================================
# Project Configuration
# ============================================================================
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samba-insight"
version = "1.0.0"
description = "Brazil E-Commerce Analytics - End-to-End Data Pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "az@azni.me"}
]
keywords = ["data-engineering", "bigquery", "dbt", "analytics", "e-commerce"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/azniosman/project-samba-insight"
Documentation = "https://github.com/azniosman/project-samba-insight/blob/main/README.md"
Repository = "https://github.com/azniosman/project-samba-insight"
Issues = "https://github.com/azniosman/project-samba-insight/issues"

# ============================================================================
# Black - Code Formatter
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | dbt/target
  | dbt/dbt_packages
)/
'''

# ============================================================================
# isort - Import Sorter
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/dbt/*", "*/migrations/*"]
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================================================
# mypy - Static Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "google.*",
    "kaggle.*",
    "streamlit.*",
    "plotly.*",
    "pandas.*",
    "dotenv.*",
    "great_expectations.*",
    "structlog.*",
    "matplotlib.*",
    "numpy.*",
    "seaborn.*",
]
ignore_missing_imports = true

# ============================================================================
# pytest - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Raise error on unregistered markers
    "--strict-config",        # Raise error on unknown config options
    "--cov=src",             # Measure coverage of src/ directory
    "--cov-branch",          # Measure branch coverage
    "--cov-report=term-missing",  # Show missing lines in terminal
    "--cov-report=html",     # Generate HTML coverage report
    "--cov-report=xml",      # Generate XML coverage report (for CI)
    "--cov-fail-under=80",   # Fail if coverage below 80%
    "--verbose",
    "--tb=short",            # Shorter traceback format
    "--maxfail=5",           # Stop after 5 failures
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "bigquery: marks tests that require BigQuery access",
    "gcs: marks tests that require GCS access",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# ============================================================================
# coverage - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/setup.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# bandit - Security Linter
# ============================================================================
[tool.bandit]
exclude_dirs = [
    "/tests/",
    "/test/",
    "/.venv/",
    "/venv/",
    "/dbt/",
]
skips = [
    "B101",  # assert_used - we use asserts in tests
    "B601",  # paramiko_calls - may need for SSH
    "B608",  # hardcoded_sql_expressions - false positives for internal queries
]
# Use default tests, don't explicitly list them to avoid version compatibility issues

# ============================================================================
# setuptools - Package Configuration
# ============================================================================
[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]
